syntax = "proto3";

// 基础消息结构
message BaseMessage {
  int32 command = 1;  // 命令类型
  string data = 2;    // JSON格式的数据
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
}

// 场景Feed响应
message SceneFeedResponse {
  int32 roomId = 1;
  repeated Tweet tweetVoList = 2;
}

message Tweet {
  int32 id = 1;
  string content = 2;
  string author = 3;
  string avatar = 4;
  string timestamp = 5;
  int32 voteCount = 6;
  int32 commentCount = 7;
  bool isLiked = 8;
}

// 投票请求
message VoteRequest {
  string threadId = 1;
  bool isUpvote = 2;
}

// 投票响应
message VoteResponse {
  bool success = 1;
  string threadId = 2;
  int32 newVoteCount = 3;
} 