syntax = "proto3";

// 基础消息结构
message BaseMessage {
  int32 command = 1;  // 命令类型
  string data = 2;    // JSON格式的数据
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
}

// 角色列表响应
message CharacterListResponse {
  repeated Character characters = 1;
}

message Character {
  string id = 1;
  string name = 2;
  string description = 3;
  string imageUrl = 4;
}

// 最近消息响应
message RecentMessageResponse {
  repeated Message messages = 1;
}

message Message {
  string id = 1;
  string content = 2;
  string characterId = 3;
  string timestamp = 4;
}

// 主题Feed响应
message ThreadFeedResponse {
  repeated Thread threads = 1;
}

message Thread {
  string id = 1;
  string title = 2;
  string content = 3;
  string characterId = 4;
  string timestamp = 5;
  int32 voteCount = 6;
}

// 投票请求
message VoteRequest {
  string threadId = 1;
  bool isUpvote = 2;
}

// 投票响应
message VoteResponse {
  bool success = 1;
  string threadId = 2;
  int32 newVoteCount = 3;
} 